--- a/1.0/demo/index.html
+++ b/1.0/demo/index.html
@@ -5,6 +5,7 @@
     <title>page的demo</title>
     <script src="http://g.tbcdn.cn/kissy/k/1.3.0/kissy-min.js" charset="utf-8"></script>
     <link rel="stylesheet" href="http://g.tbcdn.cn/??tb/global/1.0.5/global-min.css,tb/fp/1.1.4/first-screen-min.css,tb/fp/1.1.4/second-screen-min.css?t=20130711">
+    <link rel="stylesheet" href="../index.css">
     
     <style style="text/css">
     h2{
@@ -48,37 +49,7 @@
     .code .two-tab{
     	text-indent: 4em;
     }
-     .page a,.page span{
-     	display: inline-block;
-     	margin-right:2px;
-        padding:2px 8px;
-        border:1px solid #ccc;
-     }
-     .page a,.page a:hover,.page a:visited{
-     	color:#08C;
-     }
-     .page a:hover{
-     	color:#ff6600;
-     	border: 1px solid #ff6600;
-        text-decoration: none;
-     }
-     .page span{
-     	color:#999;
-     	border:none;
-     }
-     .page-skip{
-     	margin:0px 5px;
-     	width:30px;
-     }
-     .page .page-current{
-     	color:#ff6600;
-     	font-weight: bold;
-     	border:none;
-     }
-     .page .page-current:hover,.page .page-current:visited{
-     	color:#ff6600;
-     	border:none;
-     }
+     
      </style>
     <script>
         var S = KISSY;
